welcome.lessons.welcome.variables.Variables.scala.code
var nbPas==0
var nbPas= nbPas+1
while(!estSurBiscuit){
	avance()


}
prendBiscuit();poseBiscuit()
